fix to column gap of table

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -539,3 +539,8 @@ input#submit{
 #footer {
   font-size: calc(.25 * var(--default-font-size));
 }
+
+#score_table {
+  margin: 0 auto;
+  column-gap: 3em;
+}
